--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-    <script src="sketch2.js"></script>
     <div id="content">
-      <div id="text">
+      <script src="sketch2.js"></script>
+    <div id="text">
         <h1> Snake harder </h1>
-  <h2> 뱀과 같은색의 공을 먹어주세요!</h2>
-  <h2> 6초뒤에는 공이안보여요!</h2>
+        <h2> 뱀과 같은색의 공을 먹어주세요!</h2>
+        <h2> 6초뒤에는 공이안보여요!</h2>
 </div>
 <div id="footer">SIA Art Game System 2019</div>
 </div>
-
-</body></html>
+</body>
+</html>
