--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="content">
       <script src="sketch2.js"></script>
     <div id="text">
-        <h1> Snake harder </h1>
-        <h2> 뱀과 같은색의 공을 먹어주세요!</h2>
-        <h2> 6초뒤에는 공이안보여요!</h2>
+        <h1> Relation</h1>
+        <h2> 진정한관계는 무엇일까요?</h2>
+        <h2> 진정한 관계는 고난 끝에도 나를 봐주러 오는 사람이다.</h2>
 </div>
 <div id="footer">SIA Art Game System 2019</div>
 </div>
